# primeSieve-test-suite

./: .gitignore  package-lock.json  package.json  patch_bpe.jl  test_gengrob.jl  tsconfig.json
.devcontainer/: devcontainer.json
cpp/: CppGrobnerBench.sh  finitegrobner  gengrobner  grobnersmart  ntt  ntt.cpp  primeSieve  primeSieve.cpp
cpp/generic/: BitPackedExponent.h  DoubleField.h  GenGrobner  GenGrobner.cpp  GenGrobner_prof  IExponent.h  (+4 more)
csharp/: Program.cs
fortran/: primeSieve  primeSieve.f90  sieve.mod
go/: GoLUBench.sh  algos  main  main.go  primeSieve.go
java/: JavaFFTBench.sh  JavaLUBench.sh  primeSieve.java
julia/: GenGrobner.jl  JuliaGrobnerBench.sh
rust/: Cargo.toml  RustLUBench.sh
rust/src/: GenFFT.rs  GenGrobner.rs  GenLU.rs  GenMonteCarlo.rs  GenSOR.rs  lib.rs  main.rs  test.rs
rust/src/generic/: bit_packed_exponent.rs  complex_field  complex_field.rs  double_field.rs  double_ring.rs  i_copiable.rs  i_exponent.rs  i_field.rs  i_invertible.rs  i_math.rs  i_ordered.rs  i_primitive_roots.rs  i_ring.rs  i_trigonometric.rs  int_mod_p.rs  mod.rs  single_field.rs  vec_exponent.rs
rust/src/helpers/: cyclic_polynomials.rs  find_prime.rs  lcg.rs  mod.rs  prime_sieve.rs
rust/src/specialized/: FFT.rs  FiniteFFT.rs  FiniteGrobner.rs  FiniteLU.rs  FiniteSOR.rs  Grobner.rs  GrobnerSmart.rs  LU.rs  MonteCarlo.rs  SOR.rs  mod.rs  test.rs
src/: a.out  how2run.txt  primeSieve  primeSieve.cpp  primeSieve.jl  sieve  sieve.mod  test
test/: genJavaFFT.sh  genLU.sh  how2run.txt  primeSieve.sh  primeSieve_results.txt  sanity.txt  specJavaFFT.sh  theBigTest.sh
typescript/: TypeScriptLUBench.sh  index.ts
(+124 files in other folders)
