[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
seeded-random = "0.6"
once_cell = "1.17.2"


[[bin]]
name = "sieve"
path = "src/specialized/PrimeSieve.rs"
[[bin]]
name = "lu"
path = "src/specialized/LU.rs"
[[bin]]
name = "genlu"
path = "src/GenLU.rs"
[[bin]]
name = "sor"
path = "src/specialized/SOR.rs"
[[bin]]
name = "gensor"
path = "src/GenSOR.rs"
[[bin]]
name = "fft"
path = "src/specialized/FFT.rs"
[[bin]]
name = "genfft"
path = "src/GenFFT.rs"
[[bin]]
name = "test"
path = "src/test.rs"
[[bin]]
name = "montecarlo"
path = "src/specialized/MonteCarlo.rs"
[[bin]]
name = "genmontecarlo"
path = "src/GenMonteCarlo.rs"
[[bin]]
name = "grobner"
path = "src/specialized/Grobner.rs"
[[bin]]
name = "finitegrobner"
path = "src/specialized/FiniteGrobner.rs"
[[bin]]
name = "grobnerSmart"
path = "src/specialized/GrobnerSmart.rs"
[[bin]]
name = "gengrobner"
path = "src/GenGrobner.rs"