[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
seeded-random = "0.6"
once_cell = "1.17.2"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

[[bin]]
name = "test"
path = "src/test.rs"
# the binaries in target/release are finalized executables 
# there had been changes to the files to support running them all through test.rs for footprinting
# thus they can no longer be compiled as individual binaries, but instead are compiled as part of the test binary
# as such, for individual testing the already compiled binaries are to be used